<resources>
    <string name="app_name">EV3 Bluetooth Client</string>
    <string name="title_activity_about_activity">About</string>
    <string name="connect_button_name">Connect to EV3</string>
    <string name="disconnect_button_name">Disconnect from EV3</string>
    <string name="ip_label">IP Address</string>
    <string name="port_label">Port</string>
    <string name="grid_label">Display Grid</string>
    <string name="connection_text_disconnected">Status: Disconnected</string>
    <string name="connection_text_connecting">Status: Connecting...</string>
    <string name="connection_text_connected">Status: Connected to EV3</string>
    <string name="connection_text_fail_io">Status: Failed - IOException</string>
    <string name="connection_text_fail_host">Status: Failed - Host Unknown</string>
    <string name="connection_text_fail">Status: Failed - Exception thrown</string>
    <string name="connection_title_fail_io">IOException thrown</string>
    <string name="connection_title_fail_host">UnknownHostException thrown</string>
    <string name="connection_title_fail">Exception thrown</string>
    <string name="no_ip_title">No IP Address</string>
    <string name="no_ip_message">You need to enter an IP address</string>
    <string name="no_port_title">No Port Number</string>
    <string name="no_port_message">You need to enter a Port number</string>
    <string name="ok_button">OK</string>
    <string name="debug_default">Debug view</string>
    <string name="switch_hint">Show Debug</string>
    <string name="action_about">About</string>
    <string name="made_by">Made by William Russell</string>
    <string name="github">GitHub</string>
    <string name="twitter">Twitter</string>
</resources>
