<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <RelativeLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/ip_label"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ip_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/port_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/port_label"
                android:layout_below="@id/ip_layout"
                android:paddingBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/port_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/port_layout"
                android:layout_margin="8dp">
                <Switch
                    android:id="@+id/grid_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grid_label"
                    android:layout_weight="0.5"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/connection_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_button_name"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:onClick="onClick"/>
            </LinearLayout>
        </RelativeLayout>
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/input_layout">
        </FrameLayout>
        <!--
        <ListView
            android:id="@+id/output_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp">
    	</ListView>
    	-->
        <!-- RecyclerView -->
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
